--- a/run_agent/llama_factory_config/default.yaml
+++ b/run_agent/llama_factory_config/default.yaml
@@ -10,8 +10,6 @@ deepspeed: run_agent/deepspeed/ds_z3_config.json  # choices: [ds_z0_config.json,
 
 ### dataset
 dataset: automated_pipeline_o3_bugs30_combos50_depth2_workers32_nbugs1_patches2_perfile2_permodule10_train_traj
-# If you use a template, specify it here, e.g. template: qwen
-template: qwen
 cutoff_len: 32768
 max_samples: 100000
 overwrite_cache: true
@@ -29,9 +27,9 @@ save_total_limit: 2         # Only keep 1 checkpoint
 flash_attn: fa2
 enable_liger_kernel: true
 use_unsloth_gc: true
-per_device_train_batch_size: 1 
+per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
-learning_rate: 1.0e-5·
+learning_rate: 1.0e-5
 num_train_epochs: 5
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
