--- a/run_agent/llama_factory_config/run_1r1m_32B_cp.yaml
+++ b/run_agent/llama_factory_config/run_1r1m_32B_cp.yaml
@@ -1,15 +1,16 @@
 ### model
-model_name_or_path: Qwen/Qwen2.5-0.5B-Instruct
+model_name_or_path: Qwen/Qwen2.5-Coder-32B-instruct
 trust_remote_code: true
 
 ### method
-stage: sft
+stage: pt
 do_train: true
 finetuning_type: full
 deepspeed: run_agent/deepspeed/ds_z3_config.json  # choices: [ds_z0_config.json, ds_z2_config.json, ds_z3_config.json]
 
 ### dataset
-dataset: automated_pipeline_o3_bugs30_combos50_depth2_workers32_nbugs1_patches2_perfile2_permodule10_train_traj
+dataset: astropy__astropy.26d14786_cp
+template: qwen
 cutoff_len: 32768
 max_samples: 100000
 overwrite_cache: true
@@ -21,7 +22,7 @@ save_strategy: epoch
 plot_loss: true
 overwrite_output_dir: true
 save_only_model: true       # Save only the model weights
-save_total_limit: 1         # Only keep 1 checkpoint
+save_total_limit: 1      
 
 ### train
 flash_attn: fa2
@@ -30,7 +31,7 @@ use_unsloth_gc: true
 per_device_train_batch_size: 1 
 gradient_accumulation_steps: 1
 learning_rate: 1.0e-5
-num_train_epochs: 5
+num_train_epochs: 1
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
