update optimizer_in_bwd: False

--- a/run_agent/torchrun_config/full_ft_qwen_32b.yml
+++ b/run_agent/torchrun_config/full_ft_qwen_32b.yml
@@ -78,7 +78,7 @@ optimizer:
 lr_scheduler:
   _component_: torchtune.training.lr_schedulers.get_cosine_schedule_with_warmup
   num_warmup_steps: 5
-optimizer_in_bwd: True
+optimizer_in_bwd: False
 loss:
   _component_: torchtune.modules.loss.CEWithChunkedOutputLoss
 
