--- a/run_agent/amlt_config/torch_run_32B_h100.yaml
+++ b/run_agent/amlt_config/torch_run_32B_h100.yaml
@@ -3,14 +3,13 @@ description: Train Qwen 32B Model using torch tune on SWE-bench dataset
 env_defaults:
   NODES: 2
   GPUS: 8
-  MEM: 32
 
 target:
-  name: msrresrchvc
+  name: msrresrchbasicvc
   workspace_name: msrmtl-ws
 
 environment:
-  image: rocm6.4_ubuntu24.04_py3.12_pytorch2.6.0_flashattn_transformers:latest
+  image: acpt-torch2.7.0-py3.10-cuda12.6-ubuntu22.04:20250609T145333123
   registry: msrmtlacr.azurecr.io
   env:
     WANDB_API_KEY: $WANDB_API_KEY
@@ -18,6 +17,8 @@ environment:
     WANDB_DISABLED: "true" # disable wandb
     WANDB_MODE: disabled
     HF_HUB_READ_TIMEOUT: 100
+    CUDA_LAUNCH_BLOCKING: 1
+    TORCH_DISTRIBUTED_DEBUG: DETAIL
   setup:
     - sudo apt update && sudo apt install -y git python3-apt
 
@@ -25,7 +26,7 @@ code:
   local_dir: $CONFIG_DIR/../..
 
 jobs:
-- name: reproduce_swe_32B
+- name: reproduce_swe_32B_h100
   submit_args:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: $AZUREML_SINGULARITY_JOB_UAI
@@ -53,7 +54,11 @@ jobs:
       --ignore-patterns "original/consolidated.00.pth"
   - python -c "from datasets import load_dataset; ds=load_dataset('SWE-bench/SWE-smith-trajectories', split='train'); ds.to_json('datasets/ft_xml_all.jsonl')"
 
+  - mkdir -p ckpt
   - |
-    tune run --nnodes $NODES --nproc_per_node ${GPUS} full_finetune_distributed \
+    tune run --nnodes $NODES --nproc_per_node ${GPUS} \
+      --rdzv_backend c10d \
+      --rdzv_endpoint $$MASTER_ADDR:$$MASTER_PORT \
+      full_finetune_distributed \
       --config run_agent/torchrun_config/full_ft_qwen_32b.yml \
-      output_dir=$$AMLT_OUTPUT_DIR
+      output_dir=./ckpt && cp -r ckpt/* $$AMLT_OUTPUT_DIR
