--- a/run_agent/amlt_config/torch_run_32B.yaml
+++ b/run_agent/amlt_config/torch_run_32B.yaml
@@ -18,7 +18,7 @@ code:
   local_dir: /home/zhengyanshi/project/SWE-agent
 
 jobs:
-- name: reproduce_swe_32B
+- name: torch_run_32B_1r1m
   submit_args:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: $AZUREML_SINGULARITY_JOB_UAI
@@ -50,5 +50,5 @@ jobs:
   - |
     tune run --nnodes 1 --nproc_per_node 8 full_finetune_distributed \
       --config run_agent/torchrun_config/full_ft_qwen_32b.yml \
-      output_dir=./ckpt && cp -r ckpt/* $$AMLT_OUTPUT_DIR
+      $EXTRA_ARGS output_dir=$$AMLT_OUTPUT_DIR/ckpt && cp -r $$AMLT_OUTPUT_DIR/ckpt/* $$AMLT_OUTPUT_DIR
     
