update trochtunre config

--- a/run_agent/amlt_config/torch_run_32B.yaml
+++ b/run_agent/amlt_config/torch_run_32B.yaml
@@ -50,5 +50,4 @@ jobs:
   - |
     tune run --nnodes 1 --nproc_per_node 8 full_finetune_distributed \
       --config run_agent/torchrun_config/full_ft_qwen_32b.yml \
-      $EXTRA_ARGS output_dir=$$AMLT_OUTPUT_DIR/ckpt && cp -r $$AMLT_OUTPUT_DIR/ckpt/* $$AMLT_OUTPUT_DIR
-    
+      $EXTRA_ARGS output_dir=./ckpt && cp -r ./ckpt/* $$AMLT_OUTPUT_DIR
