--- a/run_agent/torchrun_config/full_ft_qwen_32b.yml
+++ b/run_agent/torchrun_config/full_ft_qwen_32b.yml
@@ -53,6 +53,7 @@ checkpointer:
   model_type: QWEN2
   safe_serialization: True
 resume_from_checkpoint: False
+keep_last_n_checkpoints: 1
 
 # Dataset and Sampler
 dataset:
