--- a/run_agent/amlt_config/torch_run_32B.yaml
+++ b/run_agent/amlt_config/torch_run_32B.yaml
@@ -22,7 +22,7 @@ jobs:
   submit_args:
     env:
       _AZUREML_SINGULARITY_JOB_UAI: $AZUREML_SINGULARITY_JOB_UAI
-  sku: G8
+  sku: G8-MI300X
   process_count_per_node: 1 # 8 # 4 GPUs. 
   command:
   - cat /opt/rocm/.info/version
@@ -49,5 +49,5 @@ jobs:
   - mkdir -p ckpt
   - |
     tune run --nnodes 1 --nproc_per_node 8 full_finetune_distributed \
-      --config run_agent/torchrun_config/full_ft_qwen_32b_reprod.yml \
+      --config run_agent/torchrun_config/full_ft_qwen_32b.yml \
       $EXTRA_ARGS output_dir=./ckpt && cp -r ./ckpt/* $$AMLT_OUTPUT_DIR
