--- a/run_agent/torchrun_config/full_ft_qwen_32b_reprod.yml
+++ b/run_agent/torchrun_config/full_ft_qwen_32b_reprod.yml
@@ -18,20 +18,20 @@
 # best to use 7B_full_single_device.yaml for those cases
 
 exp_name: qwen2p5-coder-32b-full-lr1e-4-warmup5___xml_all_250413
-output_dir: /weights/exps/${exp_name}
+output_dir: llm-weights/final/${exp_name}
 # Model Arguments
 model:
   _component_: torchtune.models.qwen2_5.qwen2_5_32b_instruct
 
 tokenizer:
   _component_: torchtune.models.qwen2_5.qwen2_5_tokenizer
-  path: /weights/Qwen/Qwen2.5-Coder-32B-Instruct/vocab.json
-  merges_file: /weights/Qwen/Qwen2.5-Coder-32B-Instruct/merges.txt
+  path: llm-weights/Qwen/Qwen2.5-Coder-32B-Instruct/vocab.json
+  merges_file: llm-weights/Qwen/Qwen2.5-Coder-32B-Instruct/merges.txt
   max_seq_len: 32768
 
 checkpointer:
   _component_: torchtune.training.FullModelHFCheckpointer
-  checkpoint_dir: /weights/Qwen/Qwen2.5-Coder-32B-Instruct
+  checkpoint_dir: llm-weights/Qwen/Qwen2.5-Coder-32B-Instruct
   checkpoint_files: [
     model-00001-of-00014.safetensors,
     model-00002-of-00014.safetensors,
