--- a/run_agent/torchrun_config/full_ft_qwen_05b.yml
+++ b/run_agent/torchrun_config/full_ft_qwen_05b.yml
@@ -17,7 +17,7 @@
 # Single device full finetuning requires more memory optimizations. It's
 # best to use 0.5B_full_single_device.yaml for those cases
 
-exp_name: qwen2p5-coder-05b-full-lr5e-5-warmup5___ft_xml_all_250413
+exp_name: testing_05b
 output_dir: llm-weights/final/${exp_name}
 # Model Arguments
 model:
@@ -45,13 +45,27 @@ resume_from_checkpoint: False
 dataset:
   _component_: torchtune.datasets.chat_dataset
   source: json
-  data_files: datasets/ft_xml_all.jsonl
-  split: train
+  data_files: data/swe-smith-trajectories.jsonl
+  split: train[:90%]
   conversation_column: messages
   conversation_style: openai
   train_on_input: False
   new_system_prompt: null
   packed: False  # True increases speed
+
+run_val_every_n_steps: 1 
+dataset_val:
+  _component_: torchtune.datasets.chat_dataset  
+  source: json  
+  data_files: data/swe-smith-trajectories.jsonl  
+  split: train[90%:]
+  conversation_column: messages  
+  conversation_style: openai  
+  train_on_input: False  
+  new_system_prompt: null  
+  packed: False   
+batch_size_val: ${batch_size}
+
 seed: 42
 shuffle: True
 batch_size: 1
@@ -80,6 +94,7 @@ metric_logger:
   _component_: torchtune.training.metric_logging.WandBLogger
   project: devrl-sft
   group: ${exp_name}
+  name: ${exp_name}
   job_type: full_finetune_distributed
 log_every_n_steps: 1
 log_peak_memory_stats: True
