--- a/run_agent/torchrun_config/full_ft_qwen_7b.yml
+++ b/run_agent/torchrun_config/full_ft_qwen_7b.yml
@@ -65,6 +65,7 @@ metric_logger:
   _component_: torchtune.training.metric_logging.WandBLogger
   project: devrl-sft
   group: ${exp_name}
+  name: ${exp_name}
   job_type: full_finetune_distributed
 log_every_n_steps: 1
 log_peak_memory_stats: True
