--- a/run_agent/amlt_config/torch_run_sweagent_32B.yaml
+++ b/run_agent/amlt_config/torch_run_sweagent_32B.yaml
@@ -5,8 +5,6 @@ environment:
   env:
     WANDB_API_KEY: $WANDB_API_KEY
     WANDB_BASE_URL: $WANDB_BASE_URL
-    # WANDB_DISABLED: "true" # disable wandb
-    # WANDB_MODE: disabled
     HF_HUB_READ_TIMEOUT: 100
     NCCL_TIMEOUT: 1800
     NCCL_BLOCKING_WAIT: "1"
@@ -38,16 +36,23 @@ jobs:
   - python -m pip install ipython ipdb
   - pip install wandb
   - pip install torchao
-  - pip install torchtune
+  - git clone --depth 1 https://github.com/ShiZhengyan/torchtune-0.6.1.git
+  - cd torchtune-0.6.1
+  - pip install -e .
+  - cd ..
 
   - |
     tune download SWE-bench/SWE-agent-LM-32B \
       --output-dir llm-weights/SWE-bench/SWE-agent-LM-32B \
       --ignore-patterns "original/consolidated.00.pth"
-  - python -c "from datasets import load_dataset; ds=load_dataset('SWE-bench/SWE-smith-trajectories', split='train'); ds.to_json('datasets/ft_xml_all.jsonl')"
+  # - python -c "from datasets import load_dataset; ds=load_dataset('SWE-bench/SWE-smith-trajectories', split='train'); ds.to_json('datasets/ft_xml_all.jsonl')"
 
   - mkdir -p ckpt
   - |
-    tune run --nnodes 1 --nproc_per_node 8 full_finetune_distributed \
-      --config run_agent/torchrun_config/full_ft_sweagent_32b.yml \
+    tune run --nnodes 1 --nproc_per_node 8 agent_sft_distributed \
+      --config run_agent/torchrun_config/full_ft_sweagent_32b_agent.yml \
       $EXTRA_ARGS output_dir=./ckpt && cp -r ./ckpt/* $$AMLT_OUTPUT_DIR
+  # - |
+  #   tune run --nnodes 1 --nproc_per_node 8 full_finetune_distributed \
+  #     --config run_agent/torchrun_config/full_ft_sweagent_32b.yml \
+  #     $EXTRA_ARGS output_dir=./ckpt && cp -r ./ckpt/* $$AMLT_OUTPUT_DIR
