--- a/run_agent/torchrun_config/full_ft_sweagent_32b_agent_special_tc_token.yml
+++ b/run_agent/torchrun_config/full_ft_sweagent_32b_agent_special_tc_token.yml
@@ -10,6 +10,28 @@ tokenizer:
   merges_file: llm-weights/SWE-bench/SWE-agent-LM-32B/merges.txt
   max_seq_len: 32768
 
+tool_call_special_tokens: [
+    "<function=",
+    "</function>",
+    "<parameter=",
+    "</parameter>",
+    "bash",
+    "submit",
+    "str_replace_editor",
+    "command",
+    "path",
+    "file_text",
+    "old_str",
+    "new_str",
+    "insert_line",
+    "view_range",
+    "view",
+    "create",
+    "str_replace",
+    "insert",
+    "undo_edit",
+]
+
 checkpointer:
   _component_: torchtune.training.FullModelHFCheckpointer
   checkpoint_dir: llm-weights/SWE-bench/SWE-agent-LM-32B
