--- a/run_agent/torchrun_config/full_ft_qwen_05b_agent.yml
+++ b/run_agent/torchrun_config/full_ft_qwen_05b_agent.yml
@@ -29,6 +29,28 @@ tokenizer:
   merges_file: llm-weights/Qwen/Qwen2.5-0.5B-Instruct/merges.txt
   max_seq_len: 32768
 
+tool_call_special_tokens: [
+    "<function=",
+    "</function>",
+    "<parameter=",
+    "</parameter>",
+    "bash",
+    "submit",
+    "str_replace_editor",
+    "command",
+    "path",
+    "file_text",
+    "old_str",
+    "new_str",
+    "insert_line",
+    "view_range",
+    "view",
+    "create",
+    "str_replace",
+    "insert",
+    "undo_edit",
+]
+
 checkpointer:
   _component_: torchtune.training.FullModelHFCheckpointer
   checkpoint_dir: llm-weights/Qwen/Qwen2.5-0.5B-Instruct
@@ -54,6 +76,10 @@ dataset:
   new_system_prompt: null
   packed: False  # True increases speed
   enable_token_classification: True  # Enable token classification for agent metrics
+  train_on_tool_calls_only: False
+  train_on_reasoning_only: False
+  tool_call_start_token: "<function"
+  tool_call_end_token: "</function>"
 
 run_val_every_n_steps: 1
 dataset_val:
@@ -66,6 +92,11 @@ dataset_val:
   train_on_input: False  
   new_system_prompt: null  
   packed: False   
+  enable_token_classification: True
+  train_on_tool_calls_only: False
+  train_on_reasoning_only: False
+  tool_call_start_token: "<function"
+  tool_call_end_token: "</function>"
 
 seed: 42
 shuffle: True
