--- a/config/gistify.yaml
+++ b/config/gistify.yaml
@@ -32,6 +32,7 @@ agent:
       6. **Do not modify the original file.** Only output the new file, called `concise.py`. The file should be saved in `{{working_dir}}`, the working directory.
 
       Your thinking should be thorough and so it's fine if it's very long.
+
     next_step_template: |-
       OBSERVATION:
       {{observation}}
@@ -48,7 +49,7 @@ agent:
     bundles:
       - path: tools/registry
       - path: tools/edit_anthropic
-      - path: tools/review_on_submit_m
+      - path: tools/gistify_submit
     registry_variables:
       USE_FILEMAP: 'true'
       SUBMIT_REVIEW_MESSAGES:
