--- a/config/force_tracing/gistify_bash_tool.yaml
+++ b/config/force_tracing/gistify_bash_tool.yaml
@@ -43,8 +43,8 @@ agent:
         * Do not hard-code outputs 
         * Do not replace test logic with simplified equivalents 
       6. Preserve test behavior
-        * The test function much remain unchanged, except for import adjustments needed to reference inlined code.
-        * The output, exceptions, or exit codes much martch the original run of {{problem_statement}}.
+        * The test function must remain unchanged, except for import adjustments needed to reference inlined code.
+        * The output, exceptions, or exit codes must match the original run of {{problem_statement}}.
 
       How to Operate:
       1. Predict the execution traces.
