--- a/config/basic_prompt/gistify_w_predfile_execution.yaml
+++ b/config/basic_prompt/gistify_w_predfile_execution.yaml
@@ -86,7 +86,7 @@ agent:
           <diff>
           {{diff}}
           </diff>
-    enable_bash_tool: true
+    enable_bash_tool: false
     parse_function:
       type: function_calling
   history_processors:
