--- a/config/add_behavior_reading/gistify_w_predfile_execution.yaml
+++ b/config/add_behavior_reading/gistify_w_predfile_execution.yaml
@@ -94,7 +94,7 @@ agent:
           <diff>
           {{diff}}
           </diff>
-    enable_bash_tool: true
+    enable_bash_tool: false
     parse_function:
       type: function_calling
   history_processors:
