--- a/config/force_tracing/gistify_w_predfile_execution.yaml
+++ b/config/force_tracing/gistify_w_predfile_execution.yaml
@@ -91,7 +91,7 @@ agent:
           <diff>
           {{diff}}
           </diff>
-    enable_bash_tool: true
+    enable_bash_tool: false
     parse_function:
       type: function_calling
   history_processors:
